--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,11 @@ repository               : "MortazaHassani/MortazaHassani.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   name             : "Mortaza HASSANI"
   pronouns         : "He/Him"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "A man, son, brother, student, teacher, engineer, entrepreneur, leader and developer.
+                      'I am the Change that I Seek in the World ;)' "
   location         : "Brussels, Belgium"
   employer         : "ULB"
   uri              : # URL
@@ -49,7 +50,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : "mortazahassani" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -71,7 +72,7 @@ author:
   weibo            : # Username
   wikipedia        : # Username
   xing             : # Username
-  youtube          : # Username
+  youtube          : "MortazaHassani"
   zhihu            : # Username
 
 # Publication Category - The following the list of publication categories and their headings
