--- a/_config.yml
+++ b/_config.yml
@@ -265,10 +265,10 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
+  # _Projects
   - scope:
       path: ""
-      type: portfolio
+      type: Projects
     values:
       layout: single
       author_profile: true
