--- a/_config.yml
+++ b/_config.yml
@@ -219,10 +219,10 @@ collections:
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
+  projects:
     output: true
     permalink: /:collection/:path/
-  talks:
+  achievements:
     output: true
     permalink: /:collection/:path/
 
